<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/displayContactImageDescription"
            android:src="@drawable/image_placeholder"/>

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/displayContactTopMargin"
            android:hint="@string/displayContactNameHint"
            android:padding="@dimen/displayContactPadding"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:hint="@string/displayContactEmailHint"
            android:padding="@dimen/displayContactPadding"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:hint="@string/displayContactPhoneHint"
            android:padding="@dimen/displayContactPadding"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <Button
            android:id="@+id/buttonDelete"
            style="@style/myDeleteButtonTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="deleteContact"
            android:text="@string/deleteContactButtonLabel"
            android:visibility="gone"
            />
    </LinearLayout>
</RelativeLayout>

