<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayoutContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/form_border"
        android:orientation="vertical"
        android:padding="@dimen/padding_15dp">

        <!-- name line -->

        <LinearLayout
            android:id="@+id/linearLayoutNameLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_2dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/contactNameLabel"
                    android:textSize="@dimen/textSizeMedium"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/moccasin"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                >

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:hint="@string/contactNameHint"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences|textPersonName"
                    android:padding="@dimen/padding_5dp"
                    android:textSize="@dimen/textSizeMedium"/>

                <requestFocus/>

            </LinearLayout>

        </LinearLayout>

        <!-- email line -->

        <LinearLayout
            android:id="@+id/linearLayoutEmailLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_2dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/contactEmailLabel"
                    android:textSize="@dimen/textSizeMedium"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/moccasin"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                >

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:hint="@string/contactEmailHint"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/padding_5dp"
                    android:textSize="@dimen/textSizeMedium"/>

            </LinearLayout>

        </LinearLayout>

        <!-- phone line -->

        <LinearLayout
            android:id="@+id/linearLayoutPhoneLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_2dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/contactPhoneLabel"
                    android:textSize="@dimen/textSizeMedium"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/moccasin"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                >

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:hint="@string/contactPhoneHint"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:padding="@dimen/padding_5dp"
                    android:textSize="@dimen/textSizeMedium"/>

            </LinearLayout>

        </LinearLayout>

        <!-- sex line -->

        <LinearLayout
            android:id="@+id/linearLayoutSexLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_2dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewSex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/radioGroupLabel"
                    android:textSize="@dimen/textSizeMedium"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/radioLabelMale"/>

                    <RadioButton
                        android:id="@+id/radioButtonFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/radioLabelFemale"/>

                </RadioGroup>

            </LinearLayout>
        </LinearLayout>

        <!-- button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                style="@style/myAddButtonTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="saveContact"
                android:text="@string/saveContactButtonLabel"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
